# zk-light-client-implementation

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  CoreConcept.md  LICENSE  Makefile  README.md  docker-compose.yml  docker-stack.yml  sonar-project.properties  test.json
block_finality/: Cargo.toml
block_finality/src/: lib.rs  prove_block.rs  prove_crypto.rs  prove_primitives.rs  recursion.rs  service.rs  types.rs  utils.rs
bp_prover/: Cargo.toml
bp_prover/src/: main.rs
contracts/foundry-hardhat/: .gitignore  Cargo.toml  foundry.toml  hardhat.config.ts  package.json  remappings.txt  tsconfig.json
contracts/foundry-hardhat/scripts/: deploy_NearVerifierRisczero.ts  deploy_RiscZeroGroth16Verifier.ts
contracts/foundry-hardhat/src/: IRiscZeroVerifier.sol  NearVerifierRiscZero.sol  StructHash.sol  groth16.rs  lib.rs
contracts/foundry-hardhat/src/groth16/: ControlID.sol  RiscZeroGroth16Verifier.sol
contracts/foundry-hardhat/src/steel/: Steel.sol
contracts/foundry-hardhat/src/test/: RiscZeroCheats.sol  RiscZeroMockVerifier.sol
contracts/foundry-hardhat/tests/: RiscZeroGroth16Verifier.t.sol  TestReceipt.sol
crypto/plonky2_bn128/: Cargo.toml
crypto/plonky2_bn128/src/: config.rs  lib.rs  poseidon_bn128.rs  poseidon_bn128_constants.rs
crypto/plonky2_ecdsa/: Cargo.toml
crypto/plonky2_ecdsa/src/: lib.rs  serialization.rs
crypto/plonky2_ecdsa/src/gadgets/: biguint.rs  glv.rs  nonnative.rs  split_nonnative.rs
crypto/plonky2_ed25519/: .gitignore  Cargo.toml  README.md
crypto/plonky2_ed25519/src/: lib.rs  main.rs
crypto/plonky2_ed25519/src/curve/: curve_adds.rs  curve_types.rs  ed25519.rs  (+1 more)
crypto/plonky2_sha256/: Cargo.toml  README.md
crypto/plonky2_sha256/src/: circuit.rs  main.rs
crypto/plonky2_sha256_u32/: .gitignore  Cargo.toml  README.md
crypto/plonky2_sha256_u32/src/: lib.rs  merkle_utils.rs  sha256.rs  sha256_merkle.rs  types.rs
crypto/plonky2_sha512/: Cargo.toml  README.md
crypto/plonky2_sha512/src/: circuit.rs  main.rs
crypto/plonky2_sha512_u32/: Cargo.toml  README.md
crypto/plonky2_sha512_u32/src/: lib.rs  sha512.rs  types.rs
crypto/plonky2_u32/: .gitignore  Cargo.toml
crypto/plonky2_u32/src/: lib.rs  serialization.rs
near_bft_finality/fuzz/: Cargo.toml
near_bft_finality/fuzz/prove_block_data/: prove_consecutive_heights.rs  prove_eq_array.rs  two_thirds.rs  u32u8.rs
near_bft_finality/fuzz/prove_crypto/: ed25519_circuit_targets_caching.rs  ed25519_proof.rs  ed25519_proof_reuse_circuit.rs  prove_sub_hashes.rs  recursive_proof.rs  sha256_proof.rs
near_risc0/host/: Cargo.toml
near_risc0/host/hash/: last_known_height.json
near_risc0/host/src/: error.rs  lib.rs  service.rs  types.rs  util.rs
near_risc0/host/tests/: tests.rs
near_risc0/lib/: Cargo.toml
near_risc0/lib/src/: lib.rs  rpc.rs  test_utils.rs  verification.rs
near_risc0/methods/guest/: Cargo.toml
near_state_proofs/script/: Cargo.toml  config.json  result_with_proofs.txt
near_state_proofs/script/src/: main.rs  nibble_slice.rs  proof_verifier.rs  raw_node.rs  utils.rs
plonky2_ed25519/: Cargo.toml  ed25519.proof
plonky2_ed25519/src/: main.rs
plonky2_ed25519/src/curve/: curve_adds.rs  curve_multiplication.rs  ed25519.rs  eddsa.rs
plonky2_ed25519/src/field/: ed25519_base.rs  ed25519_scalar.rs
plonky2_ed25519/src/gadgets/: curve.rs  curve_fixed_base.rs  curve_windowed_mul.rs  eddsa.rs  nonnative.rs  split_nonnative.rs
plonky2_sha256/: Cargo.toml
plonky2_sha256/src/: circuit.rs  lib.rs  main.rs  split_base.rs
plonky2_sha256_j/: Cargo.toml  LICENCE-MIT
plonky2_sha256_j/examples/: hello.rs
plonky2_sha256_j/src/hash/: keccak256.rs  mod.rs  types.rs
plonky2_sha256_j/src/nonnative/: mod.rs
plonky2_sha512/: Cargo.toml  README.md
plonky2_sha512/src/: main.rs
plonky2_sig_hash/: Cargo.toml  block_data.txt
plonky2_sig_hash/src/: lib.rs  main.rs  sig_hash_circuit.rs
plonky2_sig_hash/src/curve/: curve_adds.rs  curve_types.rs  ed25519.rs  eddsa.rs
plonky2_sig_hash/src/field/: ed25519_base.rs  ed25519_scalar.rs  field_testing.rs  mod.rs
plonky2_sig_hash/src/gadgets/: curve.rs  curve_fixed_base.rs  curve_windowed_mul.rs  eddsa.rs  mod.rs  nonnative.rs  split_nonnative.rs
plonky2_sig_hash/src/hash/: mod.rs  sha256.rs  split_base.rs
provers/bp_prover/: Cargo.toml
provers/bp_prover/src/: main.rs
script/: Cargo.toml  SCRIPT.md  config.json
script/data/: block-3h4nLWekFfHdcG75otLe3teWn3ww5uYn1akniYPeYb8v.txt  block-4sqfmr17STVBQjbdc54spGWiZojPHJ8rMQ85vydFTivk.txt  block-72rM19NRnH7PjnGHYKkRsT4FY5Uk15o4aLd92CkR1Uqt.txt  block-8g97zq8FYz9CoPUz2q4bPa4cu8qWHsTHAvDJJZJmkeXJ.txt  block-AvSzFyuj73DUpd44J4EZmCixh5ph3R1Cq3y5YqpmeWjb.txt  block-BLfkdaYCKevgvPj1Xb7h6LDZSpgGkyuxkWJBTiFQjDFa.txt  block-CaZ8FdgdFLH9t8q1F2WHRhBd2KzhPgV1g1juaxDWskhh.txt
script/data/block-A6Gcz5uXxyTrigefyr48AXwag6gB7D6txzPSR3jBqqg2/: block_hash_proving.txt  block_header.json  next_bp_hash_proving.txt  validator_bytes_representation.txt  validators_ordered.json
script/data/block-BCBr2sUdMvqsty1utWMfURchGB4gL5sSKwP1kRvU8kna/: block_hash_proving.txt  block_header.json  next_bp_hash_proving.txt  validator_bytes_representation.txt  validators_ordered.json
script/data/block-BdBamM462hGhLkMUtDUrar5PSVnEoWNQJaZDdFgktg83/: block_hash_proving.txt  block_header.json  next_bp_hash_proving.txt  validator_bytes_representation.txt  validators_ordered.json
script/data/block-EcqGW4G71aXD3TU1cMbLUiPnahFc15MkyBScTgUveGQz/: block_hash_proving.txt  block_header.json  next_bp_hash_proving.txt  validator_bytes_representation.txt  validators_ordered.json
script/data/block-Ht9u4H5uTtyJxKHxkP6mnB8YEMGxK5HZcZdknDks752s/: block_hash_proving.txt  block_header.json  next_bp_hash_proving.txt
script/data/data-Et9GmoiGq1bs7vQqHDtUbyA4MRUv24CDbhUtEukNjNkk/: block_hash_proving.txt  next_bp_hash_proving.txt  validator_bytes_representation.txt
script/output/: block_header.json  validators_ordered.json
script/results/: block_hash_proving.txt  next_bp_hash_proving.txt  validator_bytes_representation.txt
script/src/: calculate_bp_hash.rs  main.rs  utils.rs
(+643 files in other folders)
