[workspace]
	members = [
		"crypto/plonky2_ed25519",
		"crypto/plonky2_sha512",
		"crypto/plonky2_sha256",
		"block_finality",
		"crypto/plonky2_sha256_u32",
		"crypto/plonky2_sha512_u32",
		"crypto/plonky2_bn128"
	]
	[workspace.package]
		authors     = [ "Zpoken" ]
		description = "ZKP for NEAR"
		edition     = "2021"
		version     = "0.1.0"

	[workspace.dependencies]
		plonky2 = {git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6"} #{git = "https://github.com/staaason/plonky2.git", rev = "9e710742982f1642fa5367bffd596143c021ba26"}
		plonky2_field = {git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6"} #{git = "https://github.com/staaason/plonky2.git", rev = "9e710742982f1642fa5367bffd596143c021ba26"}
		plonky2_util = {git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6"} #{git = "https://github.com/staaason/plonky2.git", rev = "9e710742982f1642fa5367bffd596143c021ba26"}
		plonky2_u32 = {git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6"} #{git = "https://github.com/staaason/plonky2-u32.git"}
		maybe_rayon = {git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6"} #{git = "https://github.com/staaason/plonky2.git", rev = "9e710742982f1642fa5367bffd596143c021ba26"}
		plonky2_ecdsa = {git = "https://github.com/zpoken/plonky2", rev = "a5e436079004cc4870313036324267b385089ee6"} #{git = "https://github.com/staaason/plonky2-ecdsa.git"}

		near-crypto = "0.19.0"
		near-rosetta-rpc    = { git = "https://github.com/near/nearcore"}
		near-primitives = "0.19.0"

		curve25519-dalek    = { git = "https://github.com/EkaterynaKuznetsova/curve25519-dalek", rev = "9f0cf559de8be0edee3af19f46e4804343d90a70"} 
		ed25519-compact     = "2.0.4"

		anyhow              = "1.0.40"
		clap                = { version = "4.0.29", features = [ "derive" ] }
		criterion           = "0.3"
		debug_print         = "1.0"
		env_logger          = "0.9.0"
		hex                 = "0.4.3"
		itertools           = "0.10.5"
		jemallocator        = "0.5.0"
		keccak-hash         = "0.8.0"
		log                 = "0.4.14"
		num                 = { version = "0.4", features = [ "rand" ] }
		rand_chacha         = "0.3.1"
		rayon               = "1.5.3"
		serde               = { version = "1.0", features = [ "alloc", "derive", "std" ] }
		serde_json          = "1.0"
		serde_with          = { version = "2.2.0", features = [ "hex" ] }
		sha2                = "0.10"
		sha3                = "0.10"
		static_assertions   = "1.1.0"
		unroll              = "0.1.5"

		rand = "0.8.4"

		plonky2_ed25519     = { path = "crypto/plonky2_ed25519" }
		plonky2_sha256      = { path = "crypto/plonky2_sha256" }
		plonky2_sha512      = { path = "crypto/plonky2_sha512" }
		plonky2_sha256_u32  = { path = "crypto/plonky2_sha256_u32" }
		plonky2_bn128 		= { path = "crypto/plonky2_bn128"}



[profile.release]
	opt-level = 3
	strip = true
	lto = true
	codegen-units = 1

[profile.bench]
	opt-level = 3

[profile.test]
	opt-level = 1
