[package]
name = "prover_bp"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2.workspace = true
plonky2_ecdsa.workspace = true
plonky2_util.workspace = true
plonky2_field.workspace = true
plonky2_u32.workspace = true
plonky2_sha256_j.workspace = true
plonky2_sha512.workspace = true
plonky2_ed25519.workspace = true

anyhow.workspace = true
keccak-hash.workspace = true
itertools.workspace = true
log.workspace = true
sha2.workspace = true
env_logger.workspace = true
rand.workspace = true
rayon.workspace = true
rand_chacha.workspace = true
unroll.workspace = true
static_assertions.workspace = true
curve25519-dalek.workspace = true
ed25519-compact.workspace = true

jemallocator.workspace = true

near-primitives.workspace = true
near-crypto.workspace = true

num = { version = "0.4", default-features = false, features = ["alloc", "rand"] }
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
serde_json = { version = "1.0.95", features = ["arbitrary_precision"]}
clap = { version = "4.0.29", features = ["derive"] }
