[package]
name = "plonky2_ed25519"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2.workspace = true
plonky2_util.workspace = true
plonky2_field.workspace = true
plonky2_u32.workspace = true
plonky2_ecdsa.workspace = true

plonky2_sha512.workspace = true
curve25519-dalek.workspace = true

anyhow.workspace = true
keccak-hash.workspace = true
itertools.workspace = true
log.workspace = true
sha2.workspace = true
env_logger.workspace = true
rand.workspace = true

num = { version = "0.4", default-features = false, features = ["alloc", "rand"] }
rayon = "1.5.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
rand_chacha = "0.3.1"
unroll = "0.1.5"
static_assertions = "1.1.0"
clap = { version = "4.0.29", features = ["derive"] }
