[package]
name = "plonky2_sha256"
version.workspace = true
authors.workspace = true
description.workspace = true
edition.workspace = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2.workspace = true
plonky2_util.workspace = true
plonky2_field.workspace = true
plonky2_u32.workspace = true

anyhow.workspace = true
keccak-hash.workspace = true
itertools.workspace = true
log.workspace = true
sha2.workspace = true
env_logger.workspace = true
rand.workspace = true
