[package]
description       = "Crypto gadgets for Plonky2"
edition.workspace = true
license           = "MIT OR Apache-2.0"
name              = "plonky2_sha256_j"
version           = "0.1.0"

[dependencies]
anyhow.workspace              = true
hex.workspace                 = true
itertools.workspace           = true
num.workspace                 = true
plonky2.workspace             = true
plonky2_maybe_rayon.workspace = true
# plonky2 = { version = "0.1", default-features = false, features = [
# 	"gate_testing",
# 	"parallel",
# 	"rand_chacha",
# 	"std",
# ] }
# plonky2_maybe_rayon = { version = "0.1" }
rand.workspace       = true
rayon.workspace      = true
serde.workspace      = true
serde_with.workspace = true

jemallocator.workspace = true

[dev-dependencies]
criterion.workspace   = true
debug_print.workspace = true
serde_json.workspace  = true
sha2.workspace        = true
sha3.workspace        = true
