[package]
name = "plonky2_sha512"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plonky2.workspace = true
plonky2_util.workspace = true
plonky2_field.workspace = true
plonky2_u32.workspace = true
plonky2_ecdsa.workspace = true

anyhow.workspace = true
keccak-hash.workspace = true
itertools.workspace = true
log.workspace = true
sha2.workspace = true
env_logger.workspace = true
rand.workspace = true
rand_chacha.workspace = true
rayon.workspace = true
serde.workspace = true
num.workspace = true
unroll.workspace = true
static_assertions.workspace = true
