[package]
name = "plonky2_bn128"
authors.workspace = true
description.workspace = true
edition.workspace = true
version.workspace = true

[dependencies]
ff = { package = "ff", version = "0.13", features = ["derive"] }
lazy_static = "1.4.0"
serde_derive = "1.0.9"
serde = { version = "1.0.136", features = ["alloc", "derive", "rc"] }

num.workspace = true
plonky2.workspace = true
plonky2_field.workspace = true
anyhow = "1.0.79"
serde_json = "1.0.111"


