[package]
name = "plonky2_ecdsa"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[features]
parallel = ["plonky2_maybe_rayon/parallel", "plonky2/parallel"]

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
itertools = { version = "0.10.0", default-features = false }
plonky2_maybe_rayon = { version = "0.1.1", default-features = false }
num = { version = "0.4.0", default-features = false }
plonky2.workspace = true
plonky2_u32.workspace = true
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dev-dependencies]
plonky2 = { git = "https://github.com/wormhole-foundation/plonky2-near", rev = "2244a9d802aa74f15c32ca7f4139959c61126819", default-features = false, features = ["gate_testing"] }
rand = { version = "0.8.4", default-features = false, features = ["getrandom"] }
