[package]
name = "plonky2_ed25519"
description = "ECDSA gadget for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
plonky2.workspace = true
plonky2_ecdsa.workspace = true
plonky2_field.workspace = true
plonky2_sha512.workspace = true
plonky2_u32.workspace = true
plonky2_maybe_rayon.workspace = true
plonky2_util.workspace = true
curve25519-dalek.workspace = true
ed25519-compact.workspace = true

itertools = { version = "0.10.0", default-features = false, features = ["use_alloc"] }
num = { version = "0.4", default-features = false, features = ["alloc", "rand"] }
rayon = "1.5.1"
serde = { version = "1.0", default-features = false, features = ["alloc", "derive"] }
anyhow = "1.0.40"
env_logger = "0.10.0"
log = "0.4.14"
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_chacha = "0.3.1"
unroll = "0.1.5"
keccak-hash = "0.10.0"
static_assertions = "1.1.0"
sha2 = "0.10"
clap = { version = "4.0.29", features = ["derive"] }

[profile.release]
opt-level = 3

[profile.bench]
opt-level = 3

[profile.test]
opt-level = 0


