[package]
name = "plonky2_sha256_u32"
description = "SHA-256 using U32Targer on Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
plonky2.workspace = true
plonky2_u32.workspace = true
plonky2_util.workspace = true
plonky2_ecdsa.workspace = true
rand.workspace = true

anyhow = { version = "1.0.40", default-features = false }
itertools = "0.10.5"
num = { version = "0.4.0", default-features = false }
serde = "1.0.152"
serde_with = { version = "2.2.0", features = ["hex"] }
rayon = { version = "1.5.3" }
hex = { version = "0.4.3" }

[dev-dependencies]
sha2 = { version = "0.10.6" }
serde_json = "1.0"

