[package]
	edition = "2021"
	name    = "plonky2_sha512"
	version = "0.1.0"

[dependencies]
	anyhow.workspace            = true
	env_logger.workspace        = true
	itertools.workspace         = true
	keccak-hash.workspace       = true
	log.workspace               = true
	num.workspace               = true
	plonky2.workspace           = true
	plonky2_ecdsa.workspace     = true
	plonky2_field.workspace     = true
	plonky2_u32.workspace       = true
	plonky2_util.workspace      = true
	rand.workspace              = true
	rand_chacha.workspace       = true
	rayon.workspace             = true
	serde.workspace             = true
	sha2.workspace              = true
	static_assertions.workspace = true
	unroll.workspace            = true
