[package]
name = "near_bft_finality-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
plonky2 = { git = "https://github.com/wormhole-foundation/plonky2-near", rev = "2244a9d802aa74f15c32ca7f4139959c61126819", features = ["parallel"] }
plonky2_ed25519 = { path = "../../crypto/plonky2_ed25519" }
libfuzzer-sys = "0.4"
hex = "0.4.3"
ed25519-compact = "2.0.4"
near-primitives = "0.19.0"

[dependencies.near_bft_finality]
path = ".."

[workspace]
members = ["."]

[[bin]]
name = "sha256_proof"
path = "prove_crypto/sha256_proof.rs"
test = false
doc = false

[[bin]]
name = "prove_sub_hashes"
path = "prove_crypto/prove_sub_hashes.rs"
test = false
doc = false

[[bin]]
name = "ed25519_proof"
path = "prove_crypto/ed25519_proof.rs"
test = false
doc = false

[[bin]]
name = "ed25519_circuit_targets_caching"
path = "prove_crypto/ed25519_circuit_targets_caching.rs"
test = false
doc = false

[[bin]]
name = "ed25519_proof_reuse_circuit"
path = "prove_crypto/ed25519_proof_reuse_circuit.rs"
test = false
doc = false

[[bin]]
name = "recursive_proof"
path = "prove_crypto/recursive_proof.rs"
test = false
doc = false

[[bin]]
name = "two_thirds"
path = "prove_block_data/two_thirds.rs"
test = false
doc = false

[[bin]]
name = "prove_eq_array"
path = "prove_block_data/prove_eq_array.rs"
test = false
doc = false

[[bin]]
name = "prove_consecutive_heights"
path = "prove_block_data/prove_consecutive_heights.rs"
test = false
doc = false

[[bin]]
name = "u32u8"
path = "prove_block_data/u32u8.rs"
test = false
doc = false
