[package]
name = "script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
near-primitives = "0.17.0"
elastic-array = "0.11.0"
borsh = "0.10.3"
rand = "0.8.5"
base64 = "0.21.4"
anyhow = "1.0.75"