[package]
	authors.workspace     = true
	description.workspace = true
	edition.workspace     = true
	name                  = "bp_prover"
	version.workspace     = true

[dependencies]
	anyhow.workspace            = true
	clap.workspace              = true
	curve25519-dalek.workspace  = true
	env_logger.workspace        = true
	itertools.workspace         = true
	jemallocator.workspace      = true
	keccak-hash.workspace       = true
	log.workspace               = true
	near-crypto.workspace       = true
	near-primitives.workspace   = true
	num.workspace               = true
	plonky2.workspace           = true
	plonky2_field.workspace     = true
	plonky2_sha256_j.workspace  = true
	plonky2_util.workspace      = true
	rand.workspace              = true
	rand_chacha.workspace       = true
	rayon.workspace             = true
	serde.workspace             = true
	serde_json.workspace        = true
	sha2.workspace              = true
	static_assertions.workspace = true
	unroll.workspace            = true
