[package]
name = "near_risc0"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
risc0-zkvm = { version = "1.1.2", default-features = false, features = ['std', 'getrandom'] }
getrandom = { version = "0.1.16", features = ["dummy"] }
near-primitives-core = { version = "0.26.0" }
lib = { path = "../../lib", default-features = false }
log = { version = "0.4.22" }
primitive-types = { version = "0.10", default-features = false }
curve25519-dalek = { version = "4.1.3" }
alloy-sol-types = "0.8.8"

[patch.crates-io]
sha2 = { git = "https://github.com/risc0/RustCrypto-hashes", tag = "sha2-v0.10.8-risczero.0" }
crypto-bigint = { git = "https://github.com/risc0/RustCrypto-crypto-bigint", tag = "v0.5.5-risczero.0" }
ed25519-dalek = { git = "https://github.com/ZpokenWeb3/curve25519-dalek.git", tag = "curve25519-4.1.3-risczero.0" }
curve25519-dalek = { git = "https://github.com/ZpokenWeb3/curve25519-dalek.git", tag = "curve25519-4.1.3-risczero.0" }